refactor: Migrate code into new libs (multiblock, util)
refactor: Migrate code into new libs (multiblock, util)1